--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,13 +53,32 @@
         <img src="/images/jsib-transparent-logo.png" alt=""> </h2>
       </a>
     </div>
-    <nav class="col-8-middle right">
+    <nav class="col-8-middle_sm-hidden right">
       <a href="/index#services"> services </a>
       <a href="/index#story"> Our Story </a>
       <a href="/index#claims"> Paid Claims </a>
       <a href="/index#map"> Contact </a>
       <a href="/index#quote" class="emphasis"> Get a Quote </a>
     </nav>
+
+    <div class="col-2-middle padded grid centered fixed desktop-hide">
+      <div>
+        <p class="hamburger">☰</p>
+      </div>
+    <!-- only opens with mobile-menu -->
+
+      <div class='grid-center mob-logo page-nav mobile-menu'>
+        <a class="mob-logo" href="/index">
+          <img src="/images/jsib-transparent-logo.png" alt=""> </h2>
+        </a>
+        <p class="cross right">╳</p>
+        <a href="/index#services"> services </a>
+        <a href="/index#story"> Our Story </a>
+        <a href="/index#claims"> Paid Claims </a>
+        <a href="/index#map"> Contact </a>
+        <a href="/index#quote" class="emphasis"> Get a Quote </a>
+      </div>
+    </div>
   </header>
 
 {{content}}
