--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,7 @@
       <a href="/index#story"> Our Story </a>
       <a href="/index#claims"> Paid Claims </a>
       <a href="/index#map"> Contact </a>
-      <a href="/blog"> Blog </a>
+      <!-- <a href="/blog"> Blog </a> -->
       <a href="/index#quote" class="emphasis"> Get a Quote </a>
     </nav>
 
@@ -82,7 +82,7 @@
         <a class="exit" href="/index#story"> Our Story </a>
         <a class="exit"  href="/index#claims"> Paid Claims </a>
         <a class="exit" href="/index#map"> Contact </a>
-        <a class="exit" href="/blog"> Blog </a>
+        <!-- <a class="exit" href="/blog"> Blog </a> -->
 
         <a href="/index#quote" class="emphasis"> Get a Quote </a>
       </div>
@@ -115,8 +115,9 @@
   <div class="col-3_sm-4_xs-12 padded-1">
     <h3> Explore </h3>
     <nav>
-      <a href="/imdex#story"> Our Story </a>
-      <a href="/blogs"> Blog </a>
+      <a href="/index#story"> Our Story </a>
+      <!-- <a href="/blogs"> Blog </a> -->
+      <a href="/index#faqs"> FAQs </a>
       <a href="/index#claims"> Paid Claims </a>
     </nav>
   </div>
@@ -131,6 +132,35 @@
     </nav>
   </div>
 </footer>
+
+<div class="grid-centered">
+  <div class="col-2-middle_sm-4 centered associates">
+    <a href="http://www.iisa.co.za/" target="_blank">
+      <img src="/images/iisa-logo.jpg" alt=""> </h2>
+    </a>
+  </div>
+  <div class="col-2-middle_sm-4 centered associates">
+    <a href="https://fia.org.za/" target="_blank">
+      <img src="/images/fia-logo.jpg" alt=""> </h2>
+    </a>
+  </div>
+  <div class="col-2-middle_sm-4 centered associates">
+    <a href="https://www.fsca.co.za/Pages/Default.aspx" target="_blank">
+      <img src="/images/fsb-sa-logo.jpg" alt=""> </h2>
+    </a>
+  </div>
+  <div class="col-2-middle_sm-4 centered associates">
+    <a href="http://www.vesa.co.za/" target="_blank">
+      <img src="/images/vesa-logo.jpg" alt=""> </h2>
+    </a>
+  </div>
+  <div class="col-2-middle_sm-4 centered associates">
+    <a href="http://www.durban.gov.za/Pages/default.aspx" target="_blank">
+      <img src="/images/ethekwini.jpg" alt=""> </h2>
+    </a>
+  </div>
+
+</div>
 <div class="col-12 centered sub-footer blue-bg">
   <p class="small-font "> <a href="https://kingcode.uk/"> Website by King Code </a>
   <a href="https://jsib.co.za/"> © jsib.co.za </a>
