--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -162,7 +162,7 @@
 
 </div>
 <div class="col-12 centered sub-footer blue-bg">
-  <p class="small-font "> <a href="https://kingcode.uk/"> Website by King Code </a>
+  <p class="small-font "> <a href="https://kingcode.uk/" target="_blank"> Website by King Code </a>
   <a href="https://jsib.co.za/"> © jsib.co.za </a>
   jerome@jsib.co.za</p>
 </div>
