--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,7 +95,7 @@
   <!-- column -->
   <div class="col-3_sm-12 padded-1">
     <a class="logo" href="/index">
-      <img src="/images/jsib-logo.png" alt=""> </h2>
+      <img src="/images/jsib-logo.png" alt="">
     </a>
     <p> We are an Authorised Financial Services Provider <br>License No. 14396 </p>
   </div>
@@ -136,27 +136,27 @@
 <div class="grid-centered">
   <div class="col-2-middle_sm-4 centered associates">
     <a href="http://www.iisa.co.za/" target="_blank">
-      <img src="/images/iisa-logo.jpg" alt=""> </h2>
+      <img src="/images/iisa-logo.jpg" alt="">
     </a>
   </div>
   <div class="col-2-middle_sm-4 centered associates">
     <a href="https://fia.org.za/" target="_blank">
-      <img src="/images/fia-logo.jpg" alt=""> </h2>
+      <img src="/images/fia-logo.jpg" alt="">
     </a>
   </div>
   <div class="col-2-middle_sm-4 centered associates">
     <a href="https://www.fsca.co.za/Pages/Default.aspx" target="_blank">
-      <img src="/images/fsb-sa-logo.jpg" alt=""> </h2>
+      <img src="/images/fsb-sa-logo.jpg" alt="">
     </a>
   </div>
   <div class="col-2-middle_sm-4 centered associates">
     <a href="http://www.vesa.co.za/" target="_blank">
-      <img src="/images/vesa-logo.jpg" alt=""> </h2>
+      <img src="/images/vesa-logo.jpg" alt="">
     </a>
   </div>
   <div class="col-2-middle_sm-4 centered associates">
     <a href="http://www.durban.gov.za/Pages/default.aspx" target="_blank">
-      <img src="/images/ethekwini.jpg" alt=""> </h2>
+      <img src="/images/ethekwini.jpg" alt="">
     </a>
   </div>
 
