--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -105,9 +105,9 @@
   <div class="col-3_sm-4_xs-12 padded-1">
     <h3> Our Services </h3>
     <nav>
-      <a href="/index#services"> Short-term Insurance </a>
-      <a href="/index#commercial"> Commercial Insurance </a>
+      <a href="/index#commercial"> Business Insurance </a>
       <a href="/index#domestic"> Domestic Insurance </a>
+      <a href="/index#assist"> JSib Assist </a>
     </nav>
   </div>
 
@@ -115,7 +115,7 @@
   <div class="col-3_sm-4_xs-12 padded-1">
     <h3> Explore </h3>
     <nav>
-      <a href="/index#story"> Our Story </a>
+      <a href="/jsib-assist"> JSib Assist Policy </a>
       <!-- <a href="/blogs"> Blog </a> -->
       <a href="/index#faqs"> FAQs </a>
       <a href="/index#claims"> Paid Claims </a>
