--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -124,7 +124,7 @@
 
   <!-- column -->
   <div class="col-2_sm-4_xs-12 padded-1">
-    <h3> Connect </h3>
+    <h3> Contact </h3>
     <nav>
       <a href="/index#map"> 19 Mill Road, Hillcrest </a>
       <a href="tel:+27317651080"> +27 (31) 765 1080 </a>
