--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
     <!-- Meta data for SEO purposes. -->
     <title> {{page.title}} </title>
-    <meta name="description" content="{{page.meta-description}}">
+    <meta name="description" content="{{page.meta-site-description}}">
     <meta name="keywords" content="{{page.meta-keywords}}">
 
     <!-- meta data to tell the browser that your devide is responsive -->
