--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,12 +65,12 @@
       </a>
     </div>
     <nav class="col-8-middle_sm-hidden right">
-      <a href="/index#services"> services </a>
-      <a href="/index#story"> Our Story </a>
-      <a href="/index#claims"> Paid Claims </a>
-      <a href="/index#map"> Contact </a>
+      <a href="/#services"> services </a>
+      <a href="/#story"> Our Story </a>
+      <a href="/#claims"> Paid Claims </a>
+      <a href="/#map"> Contact </a>
       <!-- <a href="/blog"> Blog </a> -->
-      <a href="/index#quote" class="emphasis"> Get a Quote </a>
+      <a href="/#quote" class="emphasis"> Get a Quote </a>
     </nav>
 
     <div class="col-2-middle padded grid-middle centered fixed desktop-hide">
@@ -84,13 +84,13 @@
           <img src="/images/jsib-logo.png" alt=""> </h2>
         </a>
         <p class="cross exit right">╳</p>
-        <a class="exit" href="/index#services"> services </a>
-        <a class="exit" href="/index#story"> Our Story </a>
-        <a class="exit"  href="/index#claims"> Paid Claims </a>
-        <a class="exit" href="/index#map"> Contact </a>
+        <a class="exit" href="/#services"> services </a>
+        <a class="exit" href="/#story"> Our Story </a>
+        <a class="exit"  href="/#claims"> Paid Claims </a>
+        <a class="exit" href="/#map"> Contact </a>
         <!-- <a class="exit" href="/blog"> Blog </a> -->
 
-        <a href="/index#quote" class="emphasis"> Get a Quote </a>
+        <a href="/#quote" class="emphasis"> Get a Quote </a>
       </div>
     </div>
   </header>
@@ -111,9 +111,9 @@
   <div class="col-3_sm-4_xs-12 padded-1">
     <h3> Our Services </h3>
     <nav>
-      <a href="/index#commercial"> Business Insurance </a>
-      <a href="/index#domestic"> Domestic Insurance </a>
-      <a href="/index#assist"> JSib Assist </a>
+      <a href="/#commercial"> Business Insurance </a>
+      <a href="/#domestic"> Domestic Insurance </a>
+      <a href="/#assist"> JSib Assist </a>
     </nav>
   </div>
 
@@ -123,8 +123,8 @@
     <nav>
       <a href="/jsib-assist"> JSib Assist Policy </a>
       <!-- <a href="/blogs"> Blog </a> -->
-      <a href="/index#faqs"> FAQs </a>
-      <a href="/index#claims"> Paid Claims </a>
+      <a href="/#faqs"> FAQs </a>
+      <a href="/#claims"> Paid Claims </a>
     </nav>
   </div>
 
@@ -132,7 +132,7 @@
   <div class="col-2_sm-4_xs-12 padded-1">
     <h3> Contact </h3>
     <nav>
-      <a href="/index#map"> 19 Mill Road, Hillcrest </a>
+      <a href="/#map"> 19 Mill Road, Hillcrest </a>
       <a href="tel:+27317651080"> +27 (31) 765 1080 </a>
       <a href="https://www.facebook.com/JSib.brokers" target="_blank"> Facebook </a>
     </nav>
