--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,7 @@
       </a>
 
     <div class="logo col-2-middle_sm-4">
-      <a class="logo" href="/index">
+      <a class="logo" href="/">
         <img src="/images/jsib-logo.png" alt=""> </h2>
       </a>
     </div>
