--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -90,7 +90,7 @@
         <a class="exit" href="/#map"> Contact </a>
         <!-- <a class="exit" href="/blog"> Blog </a> -->
 
-        <a href="/#quote" class="emphasis"> Get a Quote </a>
+        <a href="/#quote" class="emphasis exit"> Get a Quote </a>
       </div>
     </div>
   </header>
