--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,22 +55,22 @@
   <header class="grid fixed">
 
       <a  class="col-2-middle_sm-hidden emergency-assist" href="tel:+27861086800">
-        <p class="col-12">Call for emergency assist</p>
-        <p class="col-12">0861 086 800</p>
+        <p class="col-12 editable">Call for emergency assist</p>
+        <p class="col-12 editable">0861 086 800</p>
       </a>
 
     <div class="logo col-2-middle_sm-4">
       <a class="logo" href="/">
-        <img src="/images/jsib-logo.png" alt=""> </h2>
+        <img src="/images/jsib-logo.png" alt="insurance broker logo durban"> </h2>
       </a>
     </div>
     <nav class="col-8-middle_sm-hidden right">
-      <a href="/#services"> services </a>
-      <a href="/#story"> Our Story </a>
-      <a href="/#claims"> Paid Claims </a>
-      <a href="/#map"> Contact </a>
+      <a href="/#services" class="editable"> services </a>
+      <a href="/#story" class="editable"> Our Story </a>
+      <a href="/#claims" class="editable"> Paid Claims </a>
+      <a href="/#map" class="editable"> Contact </a>
       <!-- <a href="/blog"> Blog </a> -->
-      <a href="/#quote" class="emphasis"> Get a Quote </a>
+      <a href="/#quote" class="emphasis editable"> Get a Quote </a>
     </nav>
 
     <div class="col-2-middle padded grid-middle centered fixed desktop-hide">
@@ -84,13 +84,13 @@
           <img src="/images/jsib-logo.png" alt=""> </h2>
         </a>
         <p class="cross exit right">╳</p>
-        <a class="exit" href="/#services"> services </a>
-        <a class="exit" href="/#story"> Our Story </a>
-        <a class="exit"  href="/#claims"> Paid Claims </a>
-        <a class="exit" href="/#map"> Contact </a>
+        <a class="exit editable" href="/#services"> services </a>
+        <a class="exit editable" href="/#story"> Our Story </a>
+        <a class="exit editable"  href="/#claims"> Paid Claims </a>
+        <a class="exit editable" href="/#map"> Contact </a>
         <!-- <a class="exit" href="/blog"> Blog </a> -->
 
-        <a href="/#quote" class="emphasis exit"> Get a Quote </a>
+        <a href="/#quote" class="emphasis exit editable"> Get a Quote </a>
       </div>
     </div>
   </header>
@@ -103,17 +103,17 @@
     <a class="logo" href="/index">
       <img src="/images/jsib-logo.png" alt="">
     </a>
-    <p> We are an Authorised Financial Services Provider <br>License No. 14396 </p>
+    <p class="editable"> We are an Authorised Financial Services Provider <br>License No. 14396 </p>
   </div>
   <div class="col-1 sm-hidden"> <!-- empty filler --> </div>
 
   <!-- column -->
   <div class="col-3_sm-4_xs-12 padded-1">
-    <h3> Our Services </h3>
+    <h3 class="editable"> Our Services </h3>
     <nav>
-      <a href="/#commercial"> Business Insurance </a>
-      <a href="/#domestic"> Domestic Insurance </a>
-      <a href="/#assist"> JSib Assist </a>
+      <a href="/#commercial" class="editable"> Business Insurance </a>
+      <a href="/#domestic" class="editable"> Domestic Insurance </a>
+      <a href="/#assist" class="editable"> JSib Assist </a>
     </nav>
   </div>
 
@@ -121,10 +121,10 @@
   <div class="col-3_sm-4_xs-12 padded-1">
     <h3> Explore </h3>
     <nav>
-      <a href="/jsib-assist"> JSib Assist Policy </a>
+      <a href="/jsib-assist" class="editable"> JSib Assist Policy </a>
       <!-- <a href="/blogs"> Blog </a> -->
-      <a href="/#faqs"> FAQs </a>
-      <a href="/#claims"> Paid Claims </a>
+      <a href="/#faqs" class="editable"> FAQs </a>
+      <a href="/#claims" class="editable"> Paid Claims </a>
     </nav>
   </div>
 
@@ -132,36 +132,36 @@
   <div class="col-2_sm-4_xs-12 padded-1">
     <h3> Contact </h3>
     <nav>
-      <a href="/#map"> 19 Mill Road, Hillcrest </a>
-      <a href="tel:+27317651080"> +27 (31) 765 1080 </a>
-      <a href="https://www.facebook.com/JSib.brokers" target="_blank"> Facebook </a>
+      <a href="/#map" class="editable"> 19 Mill Road, Hillcrest </a>
+      <a href="tel:+27317651080" class="editable"> +27 (31) 765 1080 </a>
+      <a href="https://www.facebook.com/JSib.brokers" target="_blank" class="editable"> Facebook </a>
     </nav>
   </div>
 </footer>
 
 <div class="grid-centered">
   <div class="col-2-middle_sm-4 centered associates">
-    <a href="http://www.iisa.co.za/" target="_blank">
+    <a href="http://www.iisa.co.za/" class="editable" target="_blank">
       <img src="/images/iisa-logo.jpg" alt="">
     </a>
   </div>
   <div class="col-2-middle_sm-4 centered associates">
-    <a href="https://fia.org.za/" target="_blank">
+    <a href="https://fia.org.za/" class="editable" target="_blank">
       <img src="/images/fia-logo.jpg" alt="">
     </a>
   </div>
   <div class="col-2-middle_sm-4 centered associates">
-    <a href="https://www.fsca.co.za/Pages/Default.aspx" target="_blank">
+    <a href="https://www.fsca.co.za/Pages/Default.aspx" class="editable" target="_blank">
       <img src="/images/fsb-sa-logo.jpg" alt="">
     </a>
   </div>
   <div class="col-2-middle_sm-4 centered associates">
-    <a href="http://www.vesa.co.za/" target="_blank">
+    <a href="http://www.vesa.co.za/" class="editable" target="_blank">
       <img src="/images/vesa-logo.jpg" alt="">
     </a>
   </div>
   <div class="col-2-middle_sm-4 centered associates">
-    <a href="http://www.durban.gov.za/Pages/default.aspx" target="_blank">
+    <a href="http://www.durban.gov.za/Pages/default.aspx" class="editable" target="_blank">
       <img src="/images/ethekwini.jpg" alt="">
     </a>
   </div>
