--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@
     font-family: 'Noto Sans HK', sans-serif;
     color: rgb(90, 90, 95);
     overflow-x: hidden;
+    max-width: 1024px;
   }
 
    /* this overrides the default padding and margin on gridlex elements */
@@ -875,7 +876,7 @@
 
  .accordion1, .accordion2, .accordion3, .accordion4, .accordion5, .accordion6, .accordion7, .accordion8 p {color: rgb(90, 90, 95);}
 
-/* NEED DANIELs HELP to stop auto popping back open, and make the thing twist */
+
 .plus h4::before {
   content: "＋";
   font-size: 1.2rem;
